mongos dbStats command response missing freeStorage related fields

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution EMEA Team 2023-07-10, Execution EMEA Team 2023-07-24
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Output fields related to the freeStorage option of dbStats command are not aggregated on mongos. https://github.com/10gen/mongo/blob/a318e057037fa74d620edf0c557b53e88de60c8d/src/mongo/s/commands/cluster_db_stats_cmd.cpp#L62

            Assignee:
            Miquel Munoz (Inactive)
            Reporter:
            Miquel Munoz (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: