SERVER-78668 mongos dbStats command response missing freeStorage related fields